--- a/NavigationMockUp/MainWindow.xaml
+++ b/NavigationMockUp/MainWindow.xaml
@@ -5,14 +5,43 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NavigationMockUp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="1080" Width="1920" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" WindowStyle="None" WindowState="Normal" Loaded="Window_Loaded">
-    <Grid Background="Transparent">
-        
+        Title="MainWindow" Height="1080" Width="1920" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" WindowStyle="None" WindowState="Maximized" 
+        Loaded="Window_Loaded"
+        PreviewMouseLeftButtonDown="Window_PreviewMouseLeftButtonDown">
 
+    <Window.Resources>
+        <Style x:Key="AnimatedButtonStyle" TargetType="Button">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Background="{TemplateBinding Background}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <EventTrigger RoutedEvent="Button.Click">
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                                        To="LightBlue" Duration="0:0:0.2" AutoReverse="True"/>
+                                        <DoubleAnimation Storyboard.TargetProperty="Opacity"
+                                                         To="0.5" Duration="0:0:0.2" AutoReverse="True"/>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </EventTrigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
+
+    <Grid Background="Transparent" MouseLeftButtonDown="Grid_MouseLeftButtonDown">
         <Grid.RowDefinitions>
             <RowDefinition Height="73*"/>
-            <RowDefinition Height="757*"/>
-            <RowDefinition Height="249*"/>
+            <RowDefinition Height="107*"/>
+            <RowDefinition Height="570*"/>
+            <RowDefinition Height="80*"/>
+            <RowDefinition Height="250*"/>
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
@@ -25,111 +54,79 @@
         </Grid.ColumnDefinitions>
 
         <!-- 배경 동영상 -->
-        <Border Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="6" Grid.RowSpan="3" Panel.ZIndex ="-1">
+        <Border Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="6" Grid.RowSpan="5" Panel.ZIndex ="-1">
             <MediaElement x:Name="backgroundVideo" Source="/NavigationMockUp;component/Resources/Background.mp4"
                           LoadedBehavior="Play" UnloadedBehavior="Manual" Stretch="UniformToFill"
                           IsMuted="True" IsHitTestVisible="False" />
         </Border>
-        
 
-        <Button x:Name="buttonExit" Grid.Column="5" Background="Transparent" BorderBrush="{x:Null}" Panel.ZIndex="2"
+        <Label Name="label_date" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" VerticalContentAlignment="Center" Foreground="White" Content="10:25">
+            <Label.FontSize>
+                <Binding Path="ActualHeight" ElementName="label_date">
+                    <Binding.Converter>
+                        <local:HeightToFontSizeConverter Ratio="0.3" BaseSize="22" />
+                    </Binding.Converter>
+                </Binding>
+            </Label.FontSize>
+            <Label.Margin>30,0,0,0</Label.Margin>
+        </Label>
+
+        <Label Name="label_time" Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="2" Foreground="White" Content="07:25 AM" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
+            <Label.FontSize>
+                <Binding Path="ActualHeight" ElementName="label_time">
+                    <Binding.Converter>
+                        <local:HeightToFontSizeConverter Ratio="0.3" BaseSize="22" />
+                    </Binding.Converter>
+                </Binding>
+            </Label.FontSize>
+        </Label>
+
+        <Button x:Name="buttonExit" Grid.Column="5" Background="Transparent" BorderBrush="{x:Null}" Panel.ZIndex="2" Style="{StaticResource AnimatedButtonStyle}"
                 HorizontalAlignment="Right" Width="300"
-                VerticalAlignment="Stretch"
-                Click="buttonExit_Click">
-            <Button.Template>
-                <ControlTemplate TargetType="Button">
-                    <Border Background="{TemplateBinding Background}">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    </Border>
-                </ControlTemplate>
-            </Button.Template>
-        </Button>
-        
-        <Image Name="imageTitleBar" 
-               Grid.Column="0"  Grid.Row="0" Grid.ColumnSpan="6" Panel.ZIndex="1" 
-               VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
-               Source="/NavigationMockUp;component/Resources/titleBar.png" 
-               Opacity="0.8" Width="{Binding ActualWidth, RelativeSource={RelativeSource AncestorType=Grid}}" />
+                Click="buttonExit_Click" Margin="20,0,0,0"/>
 
-        <Button Grid.Column="0" Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderBrush="{x:Null}">
-            <Button.Template>
-                <ControlTemplate TargetType="Button">
-                    <Border Background="{TemplateBinding Background}">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    </Border>
-                </ControlTemplate>
-            </Button.Template>
+        <Image Name="imageTitleBar" 
+               Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="6" Panel.ZIndex="1"
+               Source="/NavigationMockUp;component/Resources/titleBar.png" 
+               Opacity="0.8" Stretch="Fill" />
+
+        <Button Grid.Column="0" Grid.Row="4" BorderBrush="{x:Null}" Style="{StaticResource AnimatedButtonStyle}">
             <Button.Background>
                 <ImageBrush ImageSource="/NavigationMockUp;component/Resources/buttonDashBoard.png" Opacity="0.8"/>
             </Button.Background>
         </Button>
 
-        <Button Grid.Column="1" Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderBrush="{x:Null}">
-            <Button.Template>
-                <ControlTemplate TargetType="Button">
-                    <Border Background="{TemplateBinding Background}">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    </Border>
-                </ControlTemplate>
-            </Button.Template>
+        <Button Grid.Column="1" Grid.Row="4" BorderBrush="{x:Null}" Style="{StaticResource AnimatedButtonStyle}">
             <Button.Background>
                 <ImageBrush ImageSource="/NavigationMockUp;component/Resources/buttonQuickControls.png" Opacity="0.8"/>
             </Button.Background>
         </Button>
 
-        <Button Grid.Column="2" Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderBrush="{x:Null}">
-            <Button.Template>
-                <ControlTemplate TargetType="Button">
-                    <Border Background="{TemplateBinding Background}">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    </Border>
-                </ControlTemplate>
-            </Button.Template>
+        <Button Grid.Column="2" Grid.Row="4" BorderBrush="{x:Null}" Style="{StaticResource AnimatedButtonStyle}">
             <Button.Background>
                 <ImageBrush ImageSource="/NavigationMockUp;component/Resources/buttonNavigation.png" Opacity="0.8"/>
             </Button.Background>
         </Button>
 
-        <Button Grid.Column="3" Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderBrush="{x:Null}">
-            <Button.Template>
-                <ControlTemplate TargetType="Button">
-                    <Border Background="{TemplateBinding Background}">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    </Border>
-                </ControlTemplate>
-            </Button.Template>
+        <Button Grid.Column="3" Grid.Row="4" BorderBrush="{x:Null}" Style="{StaticResource AnimatedButtonStyle}">
             <Button.Background>
                 <ImageBrush ImageSource="/NavigationMockUp;component/Resources/buttonPhone.png" Opacity="0.8"/>
             </Button.Background>
         </Button>
 
-        <Button Grid.Column="4" Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderBrush="{x:Null}">
-            <Button.Template>
-                <ControlTemplate TargetType="Button">
-                    <Border Background="{TemplateBinding Background}">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    </Border>
-                </ControlTemplate>
-            </Button.Template>
+        <Button Grid.Column="4" Grid.Row="4" BorderBrush="{x:Null}" Style="{StaticResource AnimatedButtonStyle}">
             <Button.Background>
                 <ImageBrush ImageSource="/NavigationMockUp;component/Resources/buttonMedia.png" Opacity="0.8"/>
             </Button.Background>
         </Button>
 
-        <Button Grid.Column="5" Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderBrush="{x:Null}">
-            <Button.Template>
-                <ControlTemplate TargetType="Button">
-                    <Border Background="{TemplateBinding Background}">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    </Border>
-                </ControlTemplate>
-            </Button.Template>
+        <Button Grid.Column="5" Grid.Row="4" BorderBrush="{x:Null}" Style="{StaticResource AnimatedButtonStyle}">
             <Button.Background>
                 <ImageBrush ImageSource="/NavigationMockUp;component/Resources/buttonSettings.png" Opacity="0.8"/>
             </Button.Background>
         </Button>
 
-        <Grid Grid.Column="5" Grid.Row="1">
+        <Grid Grid.Column="5" Grid.Row="1" Grid.RowSpan="3">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="172"/>
                 <ColumnDefinition Width="88*"/>
@@ -144,59 +141,41 @@
                 <RowDefinition Height="90*"/>
                 <RowDefinition Height="90*"/>
             </Grid.RowDefinitions>
-            
-            <Button Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderBrush="{x:Null}">
-                <Button.Template>
-                    <ControlTemplate TargetType="Button">
-                        <Border Background="{TemplateBinding Background}">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        </Border>
-                    </ControlTemplate>
-                </Button.Template>
+
+            <Button Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderBrush="{x:Null}" Style="{StaticResource AnimatedButtonStyle}">
                 <Button.Background>
                     <ImageBrush ImageSource="/NavigationMockUp;component/Resources/buttonPlus.png" Opacity="0.8"/>
                 </Button.Background>
             </Button>
-            <Button Grid.Column="1" Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderBrush="{x:Null}">
-                <Button.Template>
-                    <ControlTemplate TargetType="Button">
-                        <Border Background="{TemplateBinding Background}">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        </Border>
-                    </ControlTemplate>
-                </Button.Template>
+            <Button Grid.Column="1" Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderBrush="{x:Null}" Style="{StaticResource AnimatedButtonStyle}">
                 <Button.Background>
                     <ImageBrush ImageSource="/NavigationMockUp;component/Resources/buttonMinus.png" Opacity="0.8"/>
                 </Button.Background>
             </Button>
 
-            <Button Grid.Column="1" Grid.Row="4" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderBrush="{x:Null}">
-                <Button.Template>
-                    <ControlTemplate TargetType="Button">
-                        <Border Background="{TemplateBinding Background}">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        </Border>
-                    </ControlTemplate>
-                </Button.Template>
+            <Button Grid.Column="1" Grid.Row="4" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderBrush="{x:Null}" Style="{StaticResource AnimatedButtonStyle}">
                 <Button.Background>
                     <ImageBrush ImageSource="/NavigationMockUp;component/Resources/buttonMore.png" Opacity="0.8"/>
                 </Button.Background>
             </Button>
-            <Button Grid.Column="1" Grid.Row="5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderBrush="{x:Null}">
-                <Button.Template>
-                    <ControlTemplate TargetType="Button">
-                        <Border Background="{TemplateBinding Background}">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        </Border>
-                    </ControlTemplate>
-                </Button.Template>
+            <Button Grid.Column="1" Grid.Row="5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderBrush="{x:Null}" Style="{StaticResource AnimatedButtonStyle}">
                 <Button.Background>
                     <ImageBrush ImageSource="/NavigationMockUp;component/Resources/buttonCharge.png" Opacity="0.8"/>
                 </Button.Background>
             </Button>
-
-
         </Grid>
 
+        <Border x:Name="mapBorder" Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="4" Grid.RowSpan="1" Panel.ZIndex="3" Opacity="0" Visibility="Collapsed">
+            <Border.Width>
+                <Binding RelativeSource="{RelativeSource Self}" Path="ActualHeight">
+                    <Binding.Converter>
+                        <local:MultiplyByConverter Multiplier="1.7777777777777777" />
+                    </Binding.Converter>
+                </Binding>
+            </Border.Width>
+            <MediaElement x:Name="mapVideo" Source="/NavigationMockUp;component/Resources/MapVideo.mp4"
+                          LoadedBehavior="Play" UnloadedBehavior="Manual" Stretch="UniformToFill"
+                          IsMuted="True" IsHitTestVisible="False" />
+        </Border>
     </Grid>
 </Window>
